tests/baselines/reference/declareClassInterfaceImplementation.errors.txt
declareClassInterfaceImplementation.ts(5,15): error TS2420: Class 'Buffer' incorrectly implements interface 'IBuffer'.
  Index signature for type 'number' is missing in type 'Buffer'.


==== declareClassInterfaceImplementation.ts (1 errors) ====
    interface IBuffer {
        [index: number]: number;
    }
    
    declare class Buffer implements IBuffer {
                  ~~~~~~
!!! error TS2420: Class 'Buffer' incorrectly implements interface 'IBuffer'.
!!! error TS2420:   Index signature for type 'number' is missing in type 'Buffer'.
    
    }
    